Implement unified click ID structure for cleaner API
Replace 15+ individual click ID fields (gclid, fbclid, ttclid, etc.) with
unified structure using just 2 fields:
- click_id: The actual click tracking value
- click_id_type: Which parameter provided it

Benefits:
- Much cleaner API with 2 fields instead of 15+
- Easier integration logic for developers
- Maintains all existing attribution functionality
- Google Ads takes priority, then Facebook, Microsoft, etc.

Changes:
- webmetic.py: Updated _format_webmetic_result() with CLICK_ID_PARAMETERS
- tests: Updated all tests to use new click_id/click_id_type structure
- README.md: Added unified click tracking section and updated examples
- .gitignore: Added development directories exclusions

All 108 tests passing with 83% coverage.

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,12 @@ Thumbs.db
 utm_referrer_parser/data/cache_metadata.json
 utm_referrer_parser/data/referers.yaml.tmp
 utm_referrer_parser/data/referers.json.tmp
-
+*.claude
+*.ruff
+*.mypy
 # Temporary files
 *.tmp
+
+# Development directories (excluded from commits)
+django-utm-tracker-master/
+python-referer-parser-develop/
