Add tldextract for robust international domain parsing
### Major Improvements
- Replace hardcoded TLD list with industry-standard tldextract library
- Fix same-domain referrer detection bug (bauma.de -> exhibitors.bauma.de)
- Add support for complex international TLDs (.edu.au, .gov.br, .co.uk, etc.)
- Optimize referrer lookup performance with smart root domain jumps

### New Features
- Internal navigation detection between subdomains and root domains
- Comprehensive test suite with 12+ new tldextract-specific tests
- Advanced domain parsing for deeply nested subdomains
- Graceful fallback for edge cases

### API Changes
- Add tldextract>=3.1.0 as new dependency
- Enhanced webmetic_referrer() to properly detect internal navigation
- Improved referrer parsing accuracy for international domains

### Fixes
- Fixed subdomain navigation detection for complex TLDs
- Resolved domain parsing issues with deep subdomain nesting
- Enhanced case-insensitive domain comparison

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "utm-referrer-attribution-parser"
-version = "0.1.1"
+version = "0.1.2"
 description = "Modern Python library combining referrer parsing with tracking parameter extraction for web analytics"
 readme = "README.md"
 license = "MIT"
@@ -29,6 +29,7 @@ classifiers = [
 dependencies = [
     "PyYAML>=6.0",
     "requests>=2.25.0",
+    "tldextract>=3.1.0",
 ]
 
 [project.optional-dependencies]
